# apcore-cli-python

./: CHANGELOG.md  README.md  pyproject.toml
examples/extensions/math/: add.py  multiply.py
examples/extensions/sysutil/: disk.py  env.py
examples/extensions/text/: reverse.py  upper.py  wordcount.py
src/apcore_cli/: __init__.py  __main__.py  approval.py  cli.py  config.py  discovery.py  output.py  schema_parser.py  shell.py
src/apcore_cli/security/: audit.py
tests/: test_approval.py  test_cli.py  test_e2e.py  test_integration.py  test_schema_parser.py  test_shell.py
tests/test_security/: test_audit.py
